# sh0pee-voucher-crawler

./: README.MD  _snippet.txt  crawl_bloggiamgia.ipynb  crawler.ipynb  pyproject.toml  template.jinja
