[tool.poetry]
name = "crawl-bloggiamgia"
version = "0.1.0"
description = ""
authors = ["Tri Huynh <tri.huynh@hahalolo.com>"]
readme = "README.md"
packages = [{include = "crawl_bloggiamgia"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
